# suse-migration-services

./: .bumpversion.cfg  .coverage  .gitignore  .virtualenv.dev-requirements.txt  .virtualenv.requirements.txt  MANIFEST.in  Makefile  README.md  README.rst  README_QA.rst  install.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-coding-format.yml  ci-testing.yml
container/: sle16
container/sle15/: config.kiwi  config.sh
container/sle16/: config.kiwi  config.sh
doc/: DC-distribution-migration-system  Makefile  user_quide.asciidoc
doc/adoc/: Building_Documentation.adoc  generic-attributes.adoc  user_guide-docinfo.xml  user_guide.adoc
grub.d/: 99_migration
helper/: image_changelog.sh  service.tree  update_changelog.py  update_version.py
image/package/: suse-migration-rpm.changes  suse-migration-rpm.spec
package/: python-migration-rpmlintrc  python-migration-spec-template  python-migration.changes  python-migration.changes.ref  suse-migration-pre-checks-spec-template  suse-migration-services-rpmlintrc  suse-migration-services-spec-template  suse-migration-services.changes  suse-migration-services.changes.ref  suse-migration-sle15-activation-spec-template  suse-migration-sle15-activation.changes  suse-migration-sle15-activation.changes.ref  suse-migration-sle16-activation-spec-template  suse-migration-sle16-activation.changes  suse-migration-sle16-activation.changes.ref  suse-migration.changes  suse-migration.spec  suse_migration_services_spec_template
pytest-of-youkou/: pytest-current
suse_migration_services/: command.py  defaults.py  drop_components.py  exceptions.py  fstab.py  logger.py  migration_config.py  migration_target.py  path.py  resolv_conf.py  schema.py  suse_connect.py  suse_product.py  version.py  zypper.py
suse_migration_services/prechecks/: cpu_arch.py  fs.py  ha.py  kernels.py  lsm.py  ltss.py  pre_checks.py  repos.py  saptune.py  scc.py  sshd.py  wicked2nm.py  xfs.py
suse_migration_services/units/: apparmor_migration.py  btrfs_snapshot_post_migration.py  btrfs_snapshot_pre_migration.py  grub_setup.py  ha_migration.py  kernel_load.py  kernel_reboot.py  migrate.py  mount_system.py  pam_config.py  post_mount_system.py  prepare.py  product_setup.py  reboot.py  ssh_keys.py  (+7 more)
systemd/: suse-migration-apparmor-selinux.service  suse-migration-btrfs-snapshot-post-migration.service  suse-migration-btrfs-snapshot-pre-migration.service  suse-migration-console-log.service  suse-migration-container-apparmor-selinux.service  suse-migration-container-btrfs-snapshot-post-migration.service  suse-migration-container-btrfs-snapshot-pre-migration.service  suse-migration-container-emergency.service  suse-migration-container-grub-setup.service  suse-migration-container-ha.service  suse-migration-container-pam-config.service  suse-migration-container-prepare.service  suse-migration-container-product-setup.service  suse-migration-container-reboot.service  suse-migration-container-regenerate-initrd.service  suse-migration-container-setup-host-network.service  suse-migration-container-wicked-networkmanager.service  suse-migration-container.service  suse-migration-grub-setup.service  suse-migration-ha.service  suse-migration-kernel-load.service  suse-migration-kernel-reboot.service  suse-migration-mount-system.service  suse-migration-pam-config.service  suse-migration-post-mount-system.service  suse-migration-pre-checks.service  suse-migration-prepare.service  suse-migration-product-setup.service  suse-migration-reboot.service  suse-migration-regenerate-initrd.service  suse-migration-setup-host-network.service  suse-migration-setup-name-resolver.service  suse-migration-ssh-keys.service  suse-migration-umount-system.service  suse-migration-update-bootloader.service  suse-migration-wicked-networkmanager.service  suse-migration.service
tools/: migrate  network_pre.functions  run_migration
(+107 files in other folders)
